--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   connectivity_plus: ^6.1.4
   provider: ^6.1.5
   url_launcher: ^6.3.2
+  excel: ^4.0.6
+  dio: ^5.8.0+1
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
