--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: atencion_ciudadana
+name: app_atencion_ciudadana
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,6 +44,11 @@ dependencies:
   excel: ^4.0.6
   dio: ^5.8.0+1
   http_parser: ^4.1.2
+  flutter_tts: ^4.2.3
+  speech_to_text: ^7.3.0
+  audio_session: ^0.2.2
+  noise_meter: ^5.1.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+  - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
